--- a/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
@@ -72,7 +72,7 @@ $font-family: "SF Pro Text", $sans;
 		width: 100%;
 		height: 40px;
 
-		&:hover {
+		&:hover:not([disabled]) {
 			background-color: var(--wp-admin-theme-color-darker-10);
 		}
 	}
