--- a/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
@@ -78,9 +78,9 @@ $font-family: "SF Pro Text", $sans;
 		background-color: var(--studio-blue-50);
 		border-radius: 4px;
 		font-weight: 500;
-		border: none;
 		width: 100%;
-		height: 40px;
+		// adds +2 px of padding to the button to match the input field height
+		padding: 10px 14px;
 		margin-top: 16px;
 
 		&:hover:not([disabled]) {
