Change to studio-black

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
@@ -39,7 +39,7 @@ $font-family: "SF Pro Text", $sans;
 	}
 
 	.form-label {
-		color: var(--studio-gray-100);
+		color: var(--studio-black);
 		margin-bottom: 8px;
 	}
 
@@ -74,7 +74,7 @@ $font-family: "SF Pro Text", $sans;
 		}
 
 		.components-form-file-upload .add {
-			color: var(--studio-gray-100);
+			color: var(--studio-black);
 		}
 	}
 
