--- a/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
@@ -75,6 +75,7 @@ $font-family: "SF Pro Text", $sans;
 
 		.components-form-file-upload .add {
 			color: var(--studio-black);
+			text-decoration: underline;
 		}
 	}
 
