--- a/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
@@ -73,9 +73,14 @@ $font-family: "SF Pro Text", $sans;
 			height: 44px;
 		}
 
-		.components-form-file-upload .add {
-			color: var(--studio-black);
+		.components-form-file-upload {
 			text-decoration: underline;
+			.add {
+				color: var(--studio-black);
+			}
+			.replace {
+				color: var(--studio-gray-100);
+			}
 		}
 	}
 
