Revert "Add hover states for color picker"
This reverts commit c715ee8a38b70c2b1b10bbd2a1bfac065b56bd1c.

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/link-in-bio-setup/styles.scss
@@ -73,14 +73,9 @@ $font-family: "SF Pro Text", $sans;
 			height: 44px;
 		}
 
-		.components-form-file-upload {
+		.components-form-file-upload .add {
+			color: var(--studio-black);
 			text-decoration: underline;
-			.add {
-				color: var(--studio-black);
-			}
-			.replace {
-				color: var(--studio-gray-100);
-			}
 		}
 	}
 
